force-app/main/default/objects/Ecss_Hit_Record__c/Ecss_Hit_Record__c.object-meta.xml
<CustomObject>
    <label>Ecss Hit Record</label>
    <nameField>
        <label>Ecss Hit Record Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Ecss Hit Records</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>