force-app/main/default/objects/Ecss_Hit_Record__c/fields/Customer__c.field-meta.xml
<CustomField>
    <fullName>Customer__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Customer</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Ecss Hit Records</relationshipLabel>
    <relationshipName>Ecss_Hit_Records</relationshipName>
    <type>Lookup</type>
</CustomField>