force-app/main/default/objects/Ecss_Hit_Record__c/fields/Data_Name__c.field-meta.xml
<CustomField>
    <fullName>Data_Name__c</fullName>
    <label>Data Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>