force-app/main/default/objects/Ecss_Hit_Record__c/fields/Data_Property__c.field-meta.xml
<CustomField>
    <fullName>Data_Property__c</fullName>
    <label>Data Property</label>
    <length>10</length>
    <type>Text</type>
</CustomField>