force-app/main/default/objects/Ecss_Hit_Record__c/fields/Hit_State__c.field-meta.xml
<CustomField>
    <fullName>Hit_State__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Hit State</label>
    <type>Checkbox</type>
</CustomField>